hard-gists/e9625de0711f29cd0a4b57502648dd86/run.log
=== Docker Run Log for e9625de0711f29cd0a4b57502648dd86 ===
Started at: Mi 29. Okt 20:48:15 CET 2025

[2025-10-29 20:48:15] START: Running container for e9625de0711f29cd0a4b57502648dd86
[2025-10-29 20:48:16] SUCCESS: Container 4f05af8cc02434b949ad0e6de689f0f29ddabe53b7cf06002d7904ef28710a2d started for e9625de0711f29cd0a4b57502648dd86
=== Container logs for e9625de0711f29cd0a4b57502648dd86 ===
  File "/snippet.py", line 14
    print "開始時刻: " + str(start_time)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e9625de0711f29cd0a4b57502648dd86 ===
[2025-10-29 20:48:18] INFO: Container 4f05af8cc02434b949ad0e6de689f0f29ddabe53b7cf06002d7904ef28710a2d has stopped
